@@ -476,3 +476,43 @@ the kernel agree on what is null. The general form of the lesson: a harness
 trick that fakes a count must be checked against every length the matrix
 runs, because a count that is a small fraction of one batch is the whole of
 another.
+
+## Predict immunity from what the scan produces, and pin both arms of a reproducer
+
+Three findings in milestone 6 were one mistake. `PLAN_MILESTONE_6.md` 2.11 predicted Varka
+immune to `spark.sql.codegen.maxFields`, because Varka reads batches and the limit is about
+generated code; but `InMemoryTableScanExec.supportsColumnar` counts the whole cached schema, so a
+cached table of more than a hundred columns produces no batches whatever the query reads, and
+Varka had nothing to fuse (`PLAN_TASK_185.md`). The same plan called the 8000-byte cliff silent;
+Spark logs it at INFO (`PLAN_TASK_188.md` 5). And task 192's first benchmark measured Spark's
+default cache serializer, not Arrow's, so its "vanilla" arm was never columnar
+(`PLAN_TASK_192.md` 9.4). In each case the claim was written from the operator Varka replaces,
+and the answer lived one node below it, in what the scan hands up.
+
+So a prediction about a cliff, a fallback or an immunity is checked at the input path first:
+which node produces the batches, under which config, for which serializer, and what it counts.
+`EXPLAIN` shows the node; the fusion report and the INFO line say why a projection or filter was
+left to Spark (`PLAN_TASK_185.md` 8.4); and a benchmark's provenance names the serializer, since
+"the cache" is two different inputs.
+
+The reproducer that pins such a finding has two arms, and both are asserted. A test that makes
+vanilla give up (`VarkaCodegenGiveUpSuite`) proves the cliff; the claim the project makes is
+what Varka does at that cliff, which is a second assertion on the same query: the Varka node
+present in the plan, or a decline with the recorded reason. A reproducer with only the vanilla
+arm pins the half of the claim nobody disputes.
+
+## A reproducer past 64KB is sized near the smallest count that crosses it
+
+Janino's heap grows much faster than the method it compiles. `VarkaCodegenGiveUpSuite`'s G32
+compiles one projection method past 64KB so that the factory falls back to the interpreter, and
+its live heap after collection was measured at 363MB for 600 entries (still under 64KB), 473MB
+for 1000, 853MB for 1500 and about 3GB for 3000. Alone, 3000 entries pass. In CI's
+`sql - other tests` job every sql suite shares one 4GB test JVM, and a pull request that touches
+the build workflow runs that job; there G32 at 3000 ran the heap out, aborted the suite and hung
+the job until its timeout. The Varka suites job runs the suite in a JVM of its own, which is why
+the pull request that added the test passed.
+
+So a test that has to cross a code-size limit uses a count near the smallest one that crosses
+it, checked with `-Xlog:gc:file=<path>` on `Test/javaOptions` and a `-z` run of the one test.
+The other reproducers in that suite peak between 112MB and 638MB each, and the suite as a whole
+at 731MB.
